syntax = "proto3";

package emails;

service EmailsService {
  rpc SendLabReservationEmail(SendLabReservationEmailRequest) returns (SendEmailResponse);
  rpc SendSupportTicketsEmail(SendSupportTicketsEmailRequest) returns (SendEmailResponse);
}

message SendLabReservationEmailRequest {
  string to = 1;
  string companyName = 2;
  string logoUrl = 3;
  string userName = 4;
  string reservationDate = 5;
  repeated ReservationDetail details = 6;
  string primaryColor = 7;
  string subscriptionDetailId = 8;
}

message ReservationDetail {
  string labDescription = 1;
  string equipmentDescription = 2;
  string startTime = 3;
  string endTime = 4;
  string date = 5;
  ReservationMetadata metadata = 6;
}

message ReservationMetadata {
  string username = 1;
  string password = 2;
  string accessUrl = 3;
}

message SendEmailResponse {
  bool success = 1;
  string message = 2;
  string error = 3;
}

message SendSupportTicketsEmailRequest {
  string to = 1;
  string companyName = 2;
  string logoUrl = 3;
  string userName = 4;
  string ticketNumber = 5;
  string title = 6;
  string description = 7;
  string priority = 8;
  string statusCode = 9;
  string type = 10;
  string category = 11;
  string createdDate = 12;
  string primaryColor = 13;
}